resources/css/smallscreen.css
html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}

h1,
h2,
h3,
h4,
li,
p {
    font-family: "Optima", sans-serif;
}

.widgetsTop {
    width: 100%;
    z-index: 1;
    width: 100%;
    height: auto; 
    
} 
.widgetsTop ul {
    display: inline-flex;
    width: 100%;
    margin:1em 1em 1em 1em;
    height: auto;
    
    
} 
.widgetsTop li {
    color: snow;
    font-size: 2em;
    display: flex;
    width: 100%;
    height: auto; 
    justify-content: center;
    padding-top: 2em;
    
}
header{
    background: #004571;
    background-size: 200% 200%;
    max-width:100%;
    max-height: auto;
    display: block;
    align-items: center;
    padding: 0 0 0.5em 0;
    animation: backheader 6s ease infinite;
    align-content: center;
    overflow: hidden;
  }

  @keyframes backheader {
    0%{background-position:49% 0%}
    50%{background-position:52% 100%}
    100%{background-position:49% 0%}
  }

  .banner {
    display:block;
    justify-content:center; 
    max-width: 100%;
  }
  .banner #rowLion{
    
    max-width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
      
  }
  .banner img {
      max-width: 60%;
      max-height: auto;
      border-radius: 50%;
      box-shadow:0px 6px 5px ;
      margin-top: 2em;
  }
    .banner #me {
    color: snow;
    max-width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
    font-size: 2.5em;
  }

nav {
    width: 100%;
    background: #004571;
    height: auto;
    display: flex;
    align-items: center;
    margin: 0.1em 0 0 0;
}
  nav ul {
      display:inline-flex;
      width: 100%;
      height: auto;
      
    
        
  }
  nav li {
    display: flex;
    width: 100%;
    height: auto; 
  }
  .social{
    display: flex;
    justify-content:space-between;
    width: 100%;
    height: auto;
}

  
.menu-content {
    font-family: "Optima", sans-serif;
   
  }
  
  .collapsable-menu {
    width: 100%;
    height: auto;
   
    padding-left: 55%;
  }
  
  .collapsable-menu ul {
    list-style-type: none;
    padding: 0;
    display: block;
    justify-content: right;
  }
 
  .collapsable-menu li {
    font-size: 2em;
    font-family: "Optima", sans-serif;
    padding-bottom: 0.15em;
    padding-right: 1em;
  }
  .collapsable-menu a {
    display: block;
    text-decoration: none;
    
  }
  
  .collapsable-menu label {
        font-family: "Optima", sans-serif;
      font-size: 2em;
      padding-bottom: 0.25em;
  
      display: block;
      cursor: pointer;
      background: url(menu.png) no-repeat left center;
      
  }
  
  .menu-content {
      max-height: 0;
      overflow: hidden;
      font-family: "Optima", sans-serif;
  }
  
  input {
    display: none;
  }
  
  input:checked {
    display: none;
  }
  
  /* Toggle Effect */
  input:checked ~ label {
      background-image: url(close.png);
  }
  input:checked ~ .menu-content {
      max-height: 100%;
  }
  
  

.about {
    display: block;
    width: 90%;
    height: auto;
    padding: 1em 1em 1em 1em;
}
.summary {
    max-width: 100%;
    height: auto;
   
}

.summary h2 {
    color:#0b1b2a;
    margin-bottom: 0;
    letter-spacing: 0.05em;
    font-size: 2em;
    
}
.summary p {
    max-width: 100%;
    line-height: 1.6;
    margin-top: 0.5em;
    margin-bottom: 1em;
    letter-spacing: 0.05em;
    font-size: 1.5em;
   
}
hr {
    width: 100%;
    height: auto;
    margin-top: 3em;
    margin-bottom: 0;
    
}
  a {
    color:snow;
    text-decoration: none;
    padding: 0.3em 0.3em;  
  }
  
.logo {
    display: flex;
    justify-content: center;
}
.test {
    background-color: #ffc200;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around; 
}

.information h2 {
    margin: 2em 0em 0em 0em;
    letter-spacing: 0.05em;
    font-size: 2em;
    color:#0b1b2a;
}
.david img{
    max-width:100%;
    height: auto;
    border-radius: 5em ; 
}
.skills {
    max-width: 100%;
    max-height: auto;
    display: block;
    justify-content: space-between;   
}
.skills h2 {
    margin-bottom: 1em;
    margin-top: 0;
    
}
.skills img {
    width: 10%;
    max-height: auto;
    border-radius: 50%;
    box-shadow:0px 4px 4px ;
    margin-top: 1.5em;
    margin-right: 1em;
}
.work h2{
    margin: 2em 0em 0em 0em;
    letter-spacing: 0.05em;
    font-size: 2em;
    color:#0b1b2a;
}

.row {
    margin: 8px -16px;
  }
  
  /* Add padding BETWEEN each column (if you want) */
  .row,
  .row > .column {
    padding: 8px;
  }
  
  /* Create four equal columns that floats next to each other */
  .column {
    float: left;
    width: 25%;
  }
  
  /* Clear floats after rows */
  .row:after {
    content: "";
    display: table;
    clear: both;
  }
  
  /* Content */
  .content {
    background-color: white;
    padding: 10px;
  }
  
  /* Responsive layout - makes a two column-layout instead of four columns */
  @media screen and (max-width: 900px) {
    .column {
      width: 50%;
    }
  }
  
  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
  @media screen and (max-width: 600px) {
    .column {
      width: 100%;
    }
  }
  .row img {
      max-width:0%;
      max-height: auto;
  }

